# rails-new

./: Cargo.toml  Dockerfile  Dockerfile.unix  LICENSE.md  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
src/: docker_client.rs  main.rs  rails_new.rs  unix.rs  windows.rs
tests/: cli.rs
