[package]
name = "rails-new"
version = "0.5.0"
description = "A CLI tool to generate a new Rails project"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
[target.'cfg(unix)'.dependencies]
users = "0.11.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
